Setup EmailSender,Add Courier and Roles in the RolesSeeder.

--- a/Web/CookIt.Web/appsettings.json
+++ b/Web/CookIt.Web/appsettings.json
@@ -7,5 +7,10 @@
     "LogLevel": {
       "Default": "Warning"
     }
+  },
+  "SendGrid": {
+    "API_KEY": "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",
+    "SenderAddress": "no-replay@CookIt.com",
+    "SenderName": "CookIt"
   }
 }
