--- a/Web/CookIt.Web.Infrastructure/CookIt.Web.Infrastructure.csproj
+++ b/Web/CookIt.Web.Infrastructure/CookIt.Web.Infrastructure.csproj
@@ -18,4 +18,9 @@
     </PackageReference>
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\..\Data\CookIt.Data.Models\CookIt.Data.Models.csproj" />
+    <ProjectReference Include="..\..\Services\CookIt.Services.Mapping\CookIt.Services.Mapping.csproj" />
+  </ItemGroup>
+
 </Project>
