Added AdminSeeder.cs,Minor naming fixes.

--- a/Data/CookIt.Data/CookIt.Data.csproj
+++ b/Data/CookIt.Data/CookIt.Data.csproj
@@ -13,6 +13,8 @@
   <ItemGroup>
     <Compile Remove="Migrations\20190711235558_ExtendedApplicationUser_AddedAddresses.cs" />
     <Compile Remove="Migrations\20190711235558_ExtendedApplicationUser_AddedAddresses.Designer.cs" />
+    <Compile Remove="Migrations\20190712000806_ExtendedApplicationUser_AddedAddresses.cs" />
+    <Compile Remove="Migrations\20190712000806_ExtendedApplicationUser_AddedAddresses.Designer.cs" />
   </ItemGroup>
 
   <ItemGroup>
