--- a/Services/CookIt.Services.Data/CookIt.Services.Data.csproj
+++ b/Services/CookIt.Services.Data/CookIt.Services.Data.csproj
@@ -19,6 +19,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\CookIt.Common\CookIt.Common.csproj" />
     <ProjectReference Include="..\..\Data\CookIt.Data.Common\CookIt.Data.Common.csproj" />
     <ProjectReference Include="..\..\Data\CookIt.Data.Models\CookIt.Data.Models.csproj" />
     <ProjectReference Include="..\..\Web\CookIt.Web.Infrastructure\CookIt.Web.Infrastructure.csproj" />
