--- a/Data/CookIt.Data/CookIt.Data.csproj
+++ b/Data/CookIt.Data/CookIt.Data.csproj
@@ -15,6 +15,8 @@
     <Compile Remove="Migrations\20190711235558_ExtendedApplicationUser_AddedAddresses.Designer.cs" />
     <Compile Remove="Migrations\20190712000806_ExtendedApplicationUser_AddedAddresses.cs" />
     <Compile Remove="Migrations\20190712000806_ExtendedApplicationUser_AddedAddresses.Designer.cs" />
+    <Compile Remove="Migrations\20190720164527_Added_Ingredient_And_IngredientType.cs" />
+    <Compile Remove="Migrations\20190720164527_Added_Ingredient_And_IngredientType.Designer.cs" />
   </ItemGroup>
 
   <ItemGroup>
