--- a/Web/CookIt.Web.Infrastructure/CookIt.Web.Infrastructure.csproj
+++ b/Web/CookIt.Web.Infrastructure/CookIt.Web.Infrastructure.csproj
@@ -20,7 +20,14 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\Data\CookIt.Data.Models\CookIt.Data.Models.csproj" />
+    <ProjectReference Include="..\..\Services\CookIt.Services.Data\CookIt.Services.Data.csproj" />
     <ProjectReference Include="..\..\Services\CookIt.Services.Mapping\CookIt.Services.Mapping.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Reference Include="Microsoft.AspNetCore.Mvc.ViewFeatures">
+      <HintPath>..\..\..\..\..\..\..\Program Files\dotnet\sdk\NuGetFallbackFolder\microsoft.aspnetcore.mvc.viewfeatures\2.2.0\lib\netstandard2.0\Microsoft.AspNetCore.Mvc.ViewFeatures.dll</HintPath>
+    </Reference>
   </ItemGroup>
 
 </Project>
