Implemented functionality for Orders.

--- a/Data/CookIt.Data.Models/CookIt.Data.Models.csproj
+++ b/Data/CookIt.Data.Models/CookIt.Data.Models.csproj
@@ -20,6 +20,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\Services\CookIt.Services.Mapping\CookIt.Services.Mapping.csproj" />
     <ProjectReference Include="..\CookIt.Data.Common\CookIt.Data.Common.csproj" />
   </ItemGroup>
   
