Minor fixes,Added My Orders page and functionality.

--- a/Web/CookIt.Web/CookIt.Web.csproj
+++ b/Web/CookIt.Web/CookIt.Web.csproj
@@ -47,4 +47,10 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Compile>
   </ItemGroup>
+
+  <ItemGroup>
+    <Content Update="wwwroot\img\logo.png.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
 </Project>
