--- a/Data/CookIt.Data/CookIt.Data.csproj
+++ b/Data/CookIt.Data/CookIt.Data.csproj
@@ -21,6 +21,10 @@
     <Compile Remove="Migrations\20190723171147_Added_Recipes_And_Mapping_Table_For_RecipesIngredients.Designer.cs" />
     <Compile Remove="Migrations\20190726225727_Added_Deletable_Recipe.cs" />
     <Compile Remove="Migrations\20190726225727_Added_Deletable_Recipe.Designer.cs" />
+    <Compile Remove="Migrations\20190806180744_aded_valiatns.cs" />
+    <Compile Remove="Migrations\20190806180744_aded_valiatns.Designer.cs" />
+    <Compile Remove="Migrations\20190806181932_Added_DB_Validations.cs" />
+    <Compile Remove="Migrations\20190806181932_Added_DB_Validations.Designer.cs" />
   </ItemGroup>
 
   <ItemGroup>
