Fixed AdminSeeder and other minor fixes.

--- a/Data/CookIt.Data/appsettings.json
+++ b/Data/CookIt.Data/appsettings.json
@@ -1,5 +1,5 @@
 ﻿{
   "ConnectionStrings": {
-    "DefaultConnection": "Server=.\\SQLEXPRESS;Database=CookIt;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Data Source=tcp:cookitsqlserver.database.windows.net,1433;Initial Catalog=CookItSqlServer;User Id=cookitadmin@cookitsqlserver.database.windows.net;Password=J}T@5d53Z#[zapFv;"
   }
 }
